file updated with list slicing

--- a/Practise_basics.ipynb
+++ b/Practise_basics.ipynb
@@ -723,6 +723,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a76b03c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "971f6625-9126-43ef-8328-a2a7cf3ddb28",
    "metadata": {},
@@ -1032,18 +1040,310 @@
       "34\n",
       "67\n",
       "99\n",
-      "Invalid\n"
+      "EXIT PRINTING\n"
      ]
     }
    ],
    "source": [
+    "# ANOTHER EXAMPLE FOR BREAK\n",
     "scores = [34, 67, 99, 105]\n",
     "for s in scores:\n",
     " if s > 100:\n",
-    "   print(\"Invalid\")\n",
+    "   print(\"EXIT PRINTING\")\n",
     "   break\n",
     " print(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c267e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data STRUCTURES IN PYTHON\n",
+    "#LISTS\n",
+    "#DICTIONARY\n",
+    "#TUPLES\n",
+    "#SETS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "be47401b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mouma\n",
+      "['Mouma', 'Binta', 'Azeez', 'Mpudule', 'Tobi', 'Daniel']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LIST : A list is an ordered , mutable collection of values or items in a single variable\n",
+    "names_of_students = [\"Mouma\",\"Binta\", \"Azeez\", \"Mpudule\", \"Tobi\"]\n",
+    "print(names_of_students[0])\n",
+    "updated_names = names_of_students + [\"Daniel\"]\n",
+    "print(updated_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "51b9a104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ADDING LIST TOGETHER \n",
+    "List1 = [1,2,3]\n",
+    "List2 = [4,5,6] \n",
+    "List3 = List1 + List2\n",
+    "print(List3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "851c94e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Mouma', 'Binta', 'Azeez', 'Mpudule', 'Tobi', 'Daniel', 'Angela']\n"
+     ]
+    }
+   ],
+   "source": [
+    "updated_names.append(\"Angela\")\n",
+    "print(updated_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7a5a8594",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'banana', 'cherry', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding an item to a list\n",
+    "aLL_fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "aLL_fruits.append(\"orange\")\n",
+    "print(aLL_fruits)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "1629400a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mouma\n",
+      "Binta\n",
+      "Azeez\n",
+      "Daniel\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(updated_names[0])\n",
+    "print(updated_names[1]) \n",
+    "print(updated_names[2]) \n",
+    "print(updated_names[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0e93324e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "e\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List indexing\n",
+    "letters = ['a', 'b', 'c', 'd', 'e']\n",
+    "print(letters[0])  # Output: 'a' #first item in the list\n",
+    "print(letters[1])  # Output: 'b' #second item in the list       \n",
+    "print(letters[-1]) #last item in the list\n",
+    "print(letters[-2]) #second last item in the list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "62f74497",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LIST SLICING\n",
+    "letters = ['a', 'b', 'c', 'd', 'e'] \n",
+    "letters_slice = letters[0:5] \n",
+    "print(letters_slice)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "539f1f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6):  # Generates numbers from 0 to 4\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "38fb690c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'c', 'd']\n",
+      "['b', 'c']\n",
+      "['a', 'c', 'e']\n",
+      "['a', 'b', 'c']\n",
+      "['d', 'e']\n",
+      "['c', 'd', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LIST SLICING\n",
+    "letters = ['a', 'b', 'c', 'd', 'e'] \n",
+    "letters_slice = letters[1:4]  # Slices from index 1 to 3 (4 is excluded)\n",
+    "print(letters_slice)  # Output: ['b', 'c', 'd']     \n",
+    "print(letters[1:3]) # outputs b and c\n",
+    "print(letters[::2]) # outputs a,c,e every second item\n",
+    "print(letters[:3]) # outputs a,b,c first three items\n",
+    "print(letters[3:]) # outputs d,e from index 3 to the end\n",
+    "print(letters[-3:]) # outputs c,d,e last three items        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "edb7f099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "--------\n",
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#USE OF RANGE FUNCTION\n",
+    "for i in range(5):  # Generates numbers from 0 to 4\n",
+    "    print(i)\n",
+    "\n",
+    "print(\"--------\")   \n",
+    "\n",
+    "\n",
+    "for i in range(6,-4,-2):  # Generates numbers from 6 to 1, decrementing by 2\n",
+    "    print(i)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f8db4f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# randint(start, end,end)\n",
+    "i = random.randint(1, 100)\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a61ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
