--- a/PYTHON BASICS/Python_primitive_data_structures-2079.ipynb
+++ b/PYTHON BASICS/Python_primitive_data_structures-2079.ipynb
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1349,18 +1349,16 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 38,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 1,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1+1 != 2"
+    "1+1 == 2"
    ]
   },
   {
@@ -1940,7 +1938,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "id": "KNLfOvwFTquJ"
+    "id": "KNLfOvwFTquJ",
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -2078,6 +2079,64 @@
    "source": [
     "### Assigning Multiple Variables at Once\n",
     "In Python, you're even able to assign multiple variables at once. *(1)*. You can also assign the same value to multiple variables in one line. *(2)*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "six = 6\n",
+    "print(six)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, z = 4,5,6\n",
+    "print(x)\n",
+    "print(y)\n",
+    "print(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "_va9l = 7\n",
+    "print(_val)"
    ]
   },
   {
@@ -2813,7 +2872,10 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
-    "id": "_Yr_vQGOTqu6"
+    "id": "_Yr_vQGOTqu6",
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -2921,7 +2983,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2935,9 +2997,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
