--- a/Practise_basics.ipynb
+++ b/Practise_basics.ipynb
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "62f74497",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1220,7 @@
    ],
    "source": [
     "#LIST SLICING\n",
-    "letters = ['a', 'b', 'c', 'd', 'e'] \n",
+    "letters = ['a', 'b', 'c', 'd', 'e','f','g','h','k','l'] \n",
     "letters_slice = letters[0:5] \n",
     "print(letters_slice)  "
    ]
@@ -1247,6 +1247,115 @@
    "source": [
     "for i in range(6):  # Generates numbers from 0 to 4\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "47e53b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[1:3]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f312eb0e-b0b0-4ae3-b33d-f4180172e494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'd', 'g', 'l']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[::3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f83d8773-2335-4550-b12e-c835351a762c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'k', 'l']\n"
+     ]
+    }
+   ],
+   "source": [
+    "letters = ['a', 'b', 'c', 'd', 'e','f','g','h','k','l'] \n",
+    "print(letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bc633b45-113c-4240-9dfc-fa5805cd6ea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d51b8605-6c0a-4061-97e1-79ee6454ed6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e', 'f', 'g', 'h', 'k', 'l']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[3:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b853a5dd-02d2-46b5-8d4a-845ad743392d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e', 'f', 'g', 'h', 'k']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(letters[-7:-1])"
    ]
   },
   {
@@ -1278,6 +1387,29 @@
     "print(letters[:3]) # outputs a,b,c first three items\n",
     "print(letters[3:]) # outputs d,e from index 3 to the end\n",
     "print(letters[-3:]) # outputs c,d,e last three items        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ac2c0a3c-365a-42b1-b1db-f9dd466f6cf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "4\n",
+      "2\n",
+      "0\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(6,-4,-2):  # Generates numbers from 6 to 1, decrementing by 2\n",
+    "    print(i) "
    ]
   },
   {
@@ -1318,7 +1450,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "43cb0ef2-46d4-4fe9-949a-527c0956ca53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MODULES - PACKAGES -LIBRARIES "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f8db4f9d",
    "metadata": {},
    "outputs": [
@@ -1326,14 +1468,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97\n"
+      "1\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "import random as rd \n",
+    "\n",
     "# randint(start, end,end)\n",
-    "i = random.randint(1, 100)\n",
+    "i = rd.randint(1, 100)\n",
     "print(i)"
    ]
   },
@@ -1381,6 +1524,32 @@
    ],
    "source": [
     "print(round(4.6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "1afcb6ae-8842-4b08-bac6-5596b1fb5141",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, world!\n",
+      "HELLO, WORLD!\n",
+      "H\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "stri = \"Hello, World!\"\n",
+    "print(stri.lower())\n",
+    "print(stri.upper())\n",
+    "#list #string\n",
+    "print(stri[0])\n",
+    "print(len(stri))\n"
    ]
   },
   {
@@ -1505,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "9cf8baa1",
    "metadata": {},
    "outputs": [
@@ -1513,6 +1682,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " very easy\n",
+      "10\n",
+      "20\n",
       "20\n"
      ]
     }
@@ -1525,13 +1697,305 @@
     "# Find the length of the first 10 digits for the first string and the last 10 digits for the second string and add them together to get a total length\n",
     "len1 = len(str_val[-10:])\n",
     "len2 = len(str_val2[:10])\n",
+    "\n",
+    "#\n",
+    "print(str_val[-10:])\n",
+    "print(len(str_val[-10:]))\n",
+    "print(len1 + len2)\n",
     "print(int(len1) + int(len2) )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49e5aeac-8222-4cbb-90eb-0c53052d06eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Class & OOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a857cced-30c7-4657-86c5-9bb659be867a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Let's \", 'do ', 'this!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sent = [\"Let's \", 'do ', 'this!']\n",
+    "print(sent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "93258ceb-6733-4475-82fc-c014def9bd6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine(list1:[]):\n",
+    "    # .join()\n",
+    "    sentence =\"\".join(list1)\n",
+    "    return sentence\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "15d1c92d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine(['Hello',', ','how',' ','are',' ','you','?']) == 'Hello, how are you?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "d3f06aa8-20c9-422f-a0a2-1d9fc74e3ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statement = [\"together \", 'do ', 'this!']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "bd813d4e-10a2-43d8-87d2-c951101d9a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'together do this!'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combine(statement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "b73f818c-c490-4797-a96f-6b5bfeede22c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function that finds the square root and the square of every number in the following list \n",
+    "list1 = [2,4,6,8,10]\n",
+    "list2 = [100,25,64,81]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8fcb51e8-a3d1-4016-a6fd-9e59f3118adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def square_sqrt(l:[]):\n",
+    "    # find the square root \n",
+    "    # find the square \n",
+    "    sqrt =[]\n",
+    "    square = []\n",
+    "    for i in l:\n",
+    "        sqrt.append((i)**0.5)\n",
+    "        square.append((i)**2)\n",
+    "    return sqrt, square    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4586d667-34be-4fe1-a3a7-4dd5733dc369",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1.4142135623730951,\n",
+       "  2.0,\n",
+       "  2.449489742783178,\n",
+       "  2.8284271247461903,\n",
+       "  3.1622776601683795],\n",
+       " [4, 16, 36, 64, 100])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "square_sqrt(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3d0d1a76-6362-4231-a34a-34312f0bd6db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [2,2,4,6,8,10]\n",
+    "\n",
+    "print(list1[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbd80483-9e8c-43b7-8e84-e90252ffc7aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Write a function that takes in any 3 random ages of an end user as list, finds modulo 2 of each value in a list and gives the result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5070f71f-32f7-4dbf-836a-0332e8d9c398",
+   "metadata": {},
+   "source": [
+    "### <b> Collection/Container Data types in Python  </b> \n",
+    "#### 1)  list\n",
+    "\n",
+    "What: Ordered, mutable sequence. Allows duplicates. Indexable/sliceable.\n",
+    "\n",
+    "Use for: Collections you’ll reorder, grow, or edit.\n",
+    "\n",
+    "\n",
+    "#### 2) tuple\n",
+    "\n",
+    "What: Ordered, immutable sequence. Allows duplicates. Indexable.\n",
+    "\n",
+    "Use for: Fixed records, return multiple values, dict keys (if elements are hashable).\n",
+    "\n",
+    "#### 3)set\n",
+    "\n",
+    "What: Unordered, mutable collection of unique items. No duplicates; not indexable.\n",
+    "\n",
+    "Use for: Membership tests, removing duplicates, set algebra.\n",
+    "\n",
+    "#### 4) dict (dictionary)\n",
+    "\n",
+    "What: Unordered (insertion-ordered since Python 3.7), mutable mapping of key: value pairs. Keys must be hashable and unique.\n",
+    "\n",
+    "Use for: Lookups by key, structured data records."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6b0aa088-0599-459f-9953-5eeaba205ab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'pear', 'apple', 'mango']\n",
+      "10 20\n",
+      "True\n",
+      "{1, 2, 3, 4, 5}\n",
+      "Ada\n",
+      "['id', 'name', 'roles', 'active']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List\n",
+    "fruits = [\"apple\", \"banana\", \"apple\"]      # duplicates ok\n",
+    "fruits.append(\"mango\")                      # mutate\n",
+    "fruits[1] = \"pear\"                          # replace\n",
+    "print(fruits)                               # ['apple', 'pear', 'apple', 'mango']\n",
+    "\n",
+    "\n",
+    "#Tuple\n",
+    "point = (10, 20)                            # cannot modify in place\n",
+    "x, y = point                                # unpack\n",
+    "print(point[0], y)                          # 10 20\n",
+    "\n",
+    "\n",
+    "#Set\n",
+    "nums = {1, 2, 2, 3}                         # duplicates collapse → {1, 2, 3}\n",
+    "nums.add(4)\n",
+    "print(3 in nums)                            # True\n",
+    "print(nums.union({3, 5}))                   # {1, 2, 3, 4, 5}\n",
+    "\n",
+    "\n",
+    "#Dictionary\n",
+    "user = {\"id\": 42, \"name\": \"Ada\", \"roles\": [\"admin\", \"editor\"]}\n",
+    "user[\"active\"] = True                       # add/update\n",
+    "print(user[\"name\"])                         # Ada\n",
+    "print(list(user.keys()))                    # ['id', 'name', 'roles', 'active']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "30ba7928-1e7a-4407-9419-7bd63cdb5e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "[2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#list\n",
+    "num_list = [1,2,3,4,5,6,7] #0,1,2,3,\n",
+    "\n",
+    "#indexing\n",
+    "print(num_list[-1]) #last value \n",
+    "\n",
+    "#slicing\n",
+    "print(num_list[1:6]) # 3-7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38991d2e-8731-47a6-a19d-3778eb283ff9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1539,7 +2003,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
